# Corosect

./: .gitignore  uusi_esp.ino
Team_1_nRF52/: .gitignore  README.md
Team_1_nRF52/ble_ammonia/: .clang-format  .gitignore  CMakeLists.txt  Kconfig  debug.conf  nrf52dk_nrf52832.overlay  optimize.conf  prj.conf
Team_1_nRF52/ble_ammonia/src/: bluetooth.c  bluetooth.h  config.c  config.h  main.c  mqtt.c  mqtt.h  nh3_sensor.c  nh3_sensor.h  old_snippets.md  power.c  power.h  temp.c  temp.h
Team_1_nRF52/bt-python/: .gitignore  README.md  config.py  gatt_con.py  logger.py  mqtt.py  observer.py  pyrightconfig.json
Team_2_ESP32/: README.md
Team_2_ESP32/Arduino_uno_mittauskoodi/: Arduino_uno_mittauskoodi.ino
Team_2_ESP32/No_arduino/: CMakeLists.txt
Team_2_ESP32/asm/: README.md  i2c_testwrite.S  i2c_write.S
Team_2_ESP32/esp32c3 colors/: esp32c3 colors.ino
Team_2_ESP32/esp_ble/: CMakeLists.txt  sdkconfig.defaults.esp32c3
Team_2_ESP32/exampleUsage_Muokattu_luku_testi/: exampleUsage_Muokattu_luku_testi.ino
Team_2_ESP32/i2c_manuaalisesti/: i2c_manuaalisesti.ino
Team_2_ESP32/i2c_manuaalisesti_muokattu/: i2c_manuaalisesti_muokattu.ino
Team_2_ESP32/i2c_manuaallisesti_muokattu_paranneltu_jerelta/: i2c_manuaallisesti_muokattu_paranneltu_jerelta.ino
Team_2_ESP32/i2c_manuaallisesti_muokattu_paranneltu_jerelta_2/: i2c_manuaallisesti_muokattu_paranneltu_jerelta_2.ino
Team_2_ESP32/i2c_manuaallisesti_tilakone_jere/: i2c_manuaallisesti_tilakone_jere.ino
Team_2_ESP32/lue_i2c/: lue_i2c.ino
Team_2_ESP32/no-arduino/: README.md  sdkconfig
uusi_esp/: uusi_esp.ino
(+45 files in other folders)
